tests/neg-custom-args/captures/widen-reach.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/widen-reach.scala:13:26 ----------------------------------
13 |  val y2: IO^ -> IO^ = y1.foo      // error
   |                       ^^^^^^
   |                       Found:    IO^ ->{x*} IO^{x*}
   |                       Required: IO^ -> (ex$6: caps.Exists) -> IO^{ex$6}
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/widen-reach.scala:14:30 ----------------------------------
14 |  val y3: IO^ -> IO^{x*} = y1.foo  // error
   |                           ^^^^^^
   |                           Found:    IO^ ->{x*} IO^{x*}
   |                           Required: IO^ -> IO^{x*}
   |
   | longer explanation available when compiling with `-explain`
-- [E164] Declaration Error: tests/neg-custom-args/captures/widen-reach.scala:9:6 --------------------------------------
9 |  val foo: IO^ -> IO^ = x => x // error
  |      ^
  |      error overriding value foo in trait Foo of type IO^ -> box IO^;
  |        value foo of type IO^ -> (ex$3: caps.Exists) -> IO^{ex$3} has incompatible type
  |
  | longer explanation available when compiling with `-explain`
